2002-08-14  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* Makefile.in (liboct-pathsearch.$(SHLEXT_VER)): Link to
	$(LIBKPATHSEA) here.

2002-08-08  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* lo-ieee.cc (lo_ieee_is_NA): New function.
	(lo_ieee_is_NaN_or_NA): New function.
	(octave_NA): New global value.
	(octave_ieee_init): Initialize it.
	* lo-mappers.cc (octave_is_NA): New function.
	(octave_is_NaN_or_NA): New function.
	(xisnan): Return false if NaN looks like a missing value.
	(xisnan (const Complex&)): Use xisnan here.

2002-08-02  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* CMatrix.h (ComplexMatrix::all, ComplexMatrix::any,
	ComplexMatrix::cumprod, ComplexMatrix::cumsum,
	ComplexMatrix::prod, ComplexMatrix::sum, ComplexMatrix::sumsq):
	Default value for dim is -1, not 0.
	* dMatrix.h (Matrix::all, Matrix::any, Matrix::cumprod,
	Matrix::cumsum, Matrix::prod, Matrix::sum, Matrix::sumsq): Likewise.
	* boolMatrix.h (boolMatrix:all, boolMatrix::any): Likewise.
	* chMatrix.h (charMatrix::all, charMatrix::any): Likewise.

	* mx-inlines.cc (MX_ANY_ALL_OP_ROW_CODE, MX_ANY_ALL_OP_COL_CODE):
	New macros.
	(MX_ANY_ALL_OP): Define MX_ANY_ALL_OP using them and
	MX_BASE_REDUCTION_OP.
	(MX_CUMULATIVE_OP): Fix spelling.  Change all uses.

2002-08-01  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* chMatrix.h, chMatrix.cc (charMatrix::any, charMatrix::all):
	Return boolMatrix, not Matrix.

	* mx-inlines.cc (MX_ANY_ALL_OP, MX_ALL_OP, MX_ANY_OP): New macros.
	* dMatrix.cc (Matrix::any): Replace guts with MX_ANY_OP.
	(Matrix::all): Replace guts with MX_ALL_OP.
	* CMatrix.cc (ComplexMatrix::any): Replace guts with MX_ANY_OP.
	(ComplexMatrix::all): Replace guts with MX_ALL_OP.
	* boolMatrix.cc (boolMatrix::any): Replace guts with MX_ANY_OP.
	(boolMatrix::all): Replace guts with MX_ALL_OP.
	* chMatrix.cc (charMatrix::any): Replace guts with MX_ANY_OP.
	(charMatrix::all): Replace guts with MX_ALL_OP.

	* dMatrix.h (Matrix::any): New arg, dim.
	(Matrix::all): Likewise.